[package]
name                   = "ars-test-harness-leptos"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
ars-core          = { path = "../ars-core" }
ars-i18n          = { path = "../ars-i18n", default-features = false }
ars-leptos        = { path = "../ars-leptos", features = ["csr"] }
ars-test-harness  = { path = "../ars-test-harness" }
leptos            = { version = "0.8.19", features = ["csr"] }
wasm-bindgen      = "0.2"
wasm-bindgen-test = "0.3"
web-sys           = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Window"] }

[lints]
workspace = true
