[package]
name                   = "ars-test-harness"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
ars-core = { path = "../ars-core" }
ars-i18n = { path = "../ars-i18n" }

[lints]
workspace = true
