[package]
name                   = "ars-test-harness"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
description.workspace  = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
ars-core     = { path = "../ars-core" }
ars-i18n     = { path = "../ars-i18n" }
js-sys       = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "AnimationEvent",
    "AnimationEventInit",
    "Attr",
    "Blob",
    "Clipboard",
    "CompositionEvent",
    "CompositionEventInit",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FilePropertyBag",
    "FocusEvent",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "InputEventInit",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MouseEvent",
    "NamedNodeMap",
    "Navigator",
    "Node",
    "NodeList",
    "PointerEvent",
    "PointerEventInit",
    "Touch",
    "TouchEvent",
    "TouchEventInit",
    "TouchInit",
    "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
