[package]
name    = "widgets-dioxus-css"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["web"]
web     = ["ars-dioxus/web", "dioxus/web"]
desktop = ["ars-dioxus/desktop", "dioxus/desktop"]

[dependencies]
ars-dioxus = { path = "../../crates/ars-dioxus" }
dioxus     = { version = "0.7", default-features = false, features = ["launch"] }
