[package]
name    = "widgets-dioxus-tailwind"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["web"]
web     = ["ars-dioxus/web", "ars-dioxus-components/web", "dioxus/web"]
desktop = ["ars-dioxus/desktop", "ars-dioxus-components/desktop", "dioxus/desktop"]

[dependencies]
ars-dioxus            = { path = "../../crates/ars-dioxus" }
ars-dioxus-components = { path = "../../crates/ars-dioxus-components" }
dioxus                = { version = "0.7", default-features = false, features = ["launch"] }
