[package]
name    = "widgets-leptos-tailwind"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ars-leptos            = { path = "../../crates/ars-leptos", features = ["csr"] }
ars-leptos-components = { path = "../../crates/ars-leptos-components", features = ["csr"] }
leptos                = { version = "0.8", default-features = false, features = ["csr"] }
