[package]
name                   = "spec-tool"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap  = { version = "4", features = ["derive"] }
toml  = "1.1.2+spec-1.1.0"
serde = { version = "1", features = ["derive"] }
