[package]
name    = "ars-e2e-fixture-leptos"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
ars-leptos            = { path = "../../../ars-leptos", features = ["csr"] }
ars-leptos-components = { path = "../../../ars-leptos-components", features = ["csr"] }
leptos                = { version = "0.8", default-features = false, features = ["csr"] }
